syntax = "proto3";

package verified.secondary.v1;

message Pools {
    repeated Pool pools = 1;
}

message Pool {
    bytes pool_address = 1;
}

message Trades {
    repeated Trade trades = 1;
}

message Trade {
    bytes security_address = 1;
    bytes order_type = 2;
    uint64 price = 3;
    bytes currency_address = 4;
    uint64 traded_amount = 5;
    uint64 execution_date = 6;
}